// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Card hoverable unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87 _interactive_b6cf87"
    tabindex="0"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <div
          class="_header_b6cf87"
        >
          <div
            class="_title_b6cf87"
          >
            lorem-ipsum
          </div>
        </div>
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card loading unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin memori-spin--spinning"
      >
        <div
          class="_header_b6cf87"
        >
          <div
            class="_title_b6cf87"
          >
            Card title
          </div>
        </div>
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with children unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <p>
          Ciao
        </p>
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with cover unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87"
  >
    <div
      class="_cover_b6cf87"
    >
      <img
        alt=""
        src="#"
      />
    </div>
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with custom CSS class unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87 lorem-ipsum"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with description unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <div
          class="_header_b6cf87"
        >
          <div
            class="_description_b6cf87"
          >
            Card description
          </div>
        </div>
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with title unchanged 1`] = `
<div>
  <div
    class="_card_b6cf87 _elevated_b6cf87"
  >
    <div
      class="_body_b6cf87 _padding-md_b6cf87"
    >
      <div
        class="memori-spin"
      >
        <div
          class="_header_b6cf87"
        >
          <div
            class="_title_b6cf87"
          >
            Card title
          </div>
        </div>
        <div
          class="memori-spin--spinner"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-loader-circle memori-loading-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 12a9 9 0 1 1-6.219-8.56"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
